[project]
name = "multi-agent-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "m.nauman", email = "m.nauman@foomotion.io" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-groq",
    "httpx",
    "requests",
    "redis",
    "rq",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "PyGithub",
    "GitPython",
    "SQLAlchemy",
    "pydantic",
    "pydantic-settings",
    "langchain_groq",
    "psycopg2",
    "alembic>=1.17.2",
    "PyJwt",
    "black",
    "flake8",
    "coloredlogs>=15.0.1",
]

[project.scripts]
start = "multi_agent_reviewer.cli:main"
run-worker = "multi_agent_reviewer.workers.rq_worker:run_worker"
log-test = "multi_agent_reviewer.main:testing"
repo_clone_test= "multi_agent_reviewer.utils.github_utils:clone_github_repo"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
